fix layout issue in case of long name

--- a/app/schedule/schedule.styles.scss
+++ b/app/schedule/schedule.styles.scss
@@ -146,7 +146,7 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            // max-width: 20%;
+            width: 100%;
             flex-grow: 1;
 
             svg {
